# Paddle-TensorRT-inference

./: .gitlgnore  CMakeLists.txt  README.md
benchmarks/: README.md  trt_subgraph_report_fp32_gpu.md
configs/: mock.yaml  mock_cpu_decode_benchmark.yaml  mock_cpu_preprocess_benchmark.yaml  mock_cuda_stream_pinned.yaml  mock_gpu_decode_gpu_nms.yaml  mock_gpu_decode_pre_nms.yaml  mock_gpu_preprocess.yaml  mock_predictor_pool.yaml  mock_trt_plugin_postprocess.yaml  multi_video.yaml  paddle.yaml  paddle_trt_fp16.yaml  paddle_trt_fp16_full_gpu_plugin.yaml  paddle_trt_fp16_plugin_postprocess.yaml  paddle_trt_fp16_predictor_pool.yaml  paddle_trt_int8.yaml  paddle_trt_int8_calib.yaml  paddle_trt_int8_full_gpu_plugin.yaml
cuda/: decode_kernel.cu  nms_kernel.cu  preprocess_kernel.cu
data/: README.md
docs/: stage1_design.md  stage3_video_input.md  stage_cpu_preprocess_baseline.md  stage_dynamic_batch.md  stage_full_gpu_pipeline.md  stage_gpu_decode_pre_nms.md  stage_gpu_preprocess.md  stage_nvtx_profiling.md  stage_paddle_inference_backend.md  stage_paddle_output_zero_copy.md  stage_paddle_trt_config.md  stage_paddle_trt_int8_calibration.md  stage_paddle_trt_subgraph_analysis.md  stage_postprocess_baseline.md  stage_predictor_pool.md  stage_profiling.md  stage_tensorrt_plugin.md
include/common/: config.h  logging.h  types.h
include/cuda/: cuda_runtime_utils.h  decode_kernel.h  nms_kernel.h  preprocess_kernel.h
include/inference/: infer_engine.h  mock_infer_engine.h  paddle_infer_engine.h  predictor_pool.h
include/pipeline/: batch_scheduler.h  pipeline.h  video_source.h
include/postprocess/: gpu_decode_pre_nms.h  postprocessor.h  trt_postprocess_engine.h
include/preprocess/: gpu_preprocessor.h  preprocessor.h
include/profiling/: nvtx_utils.h  profiler.h
models/: README.md
plugins/yolo_decode_plugin/: README.md  yolo_decode_plugin.cpp  yolo_decode_plugin.h
scripts/: benchmark.sh  benchmark_decode.sh  benchmark_preprocess.sh  build.sh  build_full_gpu_logged.sh  compare_decode_benchmark.py  compare_detection_outputs.py  compare_preprocess_benchmark.py  paddle_runtime_env.sh  parse_paddle_trt_log.py  prepare_int8_calibration_list.py  profile_nsys.sh  run_mock.sh  run_multi_video.sh  run_paddle.sh  run_paddle_trt.sh  run_paddle_trt_analysis.sh  run_paddle_trt_int8_calib.sh
src/: main.cpp
src/common/: config.cpp
src/cuda/: cuda_runtime_utils.cpp
src/inference/: mock_infer_engine.cpp  paddle_infer_engine.cpp  predictor_pool.cpp
src/pipeline/: batch_scheduler.cpp  pipeline.cpp  video_source.cpp
src/postprocess/: gpu_decode_pre_nms.cpp  postprocessor.cpp  trt_postprocess_engine.cpp
src/preprocess/: gpu_preprocessor.cpp  preprocessor.cpp
src/profiling/: profiler.cpp
tests/: test_batch_scheduler.cpp  test_cpu_preprocess.cpp  test_gpu_decode_pre_nms.cpp  test_gpu_nms.cpp  test_gpu_preprocess.cpp  test_mock_engine.cpp  test_postprocess_nms.cpp  test_postprocess_transform.cpp
trt_cache/: README.md
